# gazflow

./: .gitignore  AGENTS.md  COMMERCIAL-LICENSE.md  LICENSE  LICENSING.md  README.md  docker-compose.yml
back/: Cargo.toml  build.rs
back/benches/: scaling_bench.rs  solver_bench.rs
back/src/: lib.rs  main.rs
back/src/api/: batch.rs  compressor.rs  export.rs  import.rs  mod.rs  network_edit.rs  nova.rs  nova_finalize.rs  scenarios.rs  ws.rs
back/src/calibration/: import.rs  lm.rs  mod.rs  objective.rs  optimizer.rs  report.rs
back/src/compressor/: catalog.rs  flow_topology.rs  map.rs  mod.rs  parse.rs  station.rs
back/src/gaslib/: cdf.rs  compressor.rs  connectivity.rs  mod.rs  parser.rs  routing.rs  scenario.rs  solution.rs
back/src/gaslib/snapshots/: gazflow_back__gaslib__parser__tests__gaslib_11_network.snap  gazsim_back__gaslib__parser__tests__gaslib_11_network.snap
back/src/graph/: equipment.rs  mod.rs  raw.rs  scenarios.rs
back/src/import/: csv.rs  demand_profiles.rs  geojson.rs  mapping.rs  mod.rs  shapefile.rs  validation.rs  weather.rs
back/src/solver/: capacity.rs  compressor_loop.rs  config.rs  contingency.rs  continuation.rs  control_valve_loop.rs  demand.rs  gas_properties.rs  iterative.rs  mod.rs  newton.rs  nlp_ipopt.rs  nova_capacity.rs  nova_diagnostics.rs  presets.rs  regulator.rs  steady_state.rs  timeseries.rs
back/src/solver/eos/: gerg.rs  mod.rs  pr78.rs
back/src/solver/transient/: boundary.rs  config.rs  events.rs  linepack.rs  mesh.rs  mod.rs  state.rs  system.rs  trr154.rs  (+1 more)
back/src/store/: mod.rs
back/tests/: api_test.rs
(+193 files in other folders)
